--- a/env/cluster-addons/linkerd/resources/use-certmanager-cert-as-linkerd-issuer-cert.yaml
+++ b/env/cluster-addons/linkerd/resources/use-certmanager-cert-as-linkerd-issuer-cert.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: linkerd-identity-issuer
+  namespace: linkerd
 spec:
   secretName: linkerd-identity-issuer
   duration: 48h0m0s
