--- a/env/cluster-addons/linkerd/resources/linkerd-viz-ingress.yaml
+++ b/env/cluster-addons/linkerd/resources/linkerd-viz-ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     name: linkerd-viz-ingress
 spec:
+  ingressClassName: nginx
   rules:
   - host: mk.linkerd-viz.local
     http:
