move linkerd viz to viz namespace

--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -16,5 +16,5 @@ helmCharts:
     name: linkerd-viz
     version: 2.11.1
     releaseName: linkerd-viz
-    namespace: linkerd 
+    namespace: linkerd-viz
     valuesFile: linkerd-viz-values.yaml
