--- a/env/cluster-addons/linkerd/resources/linkerd-viz-ingress.yaml
+++ b/env/cluster-addons/linkerd/resources/linkerd-viz-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: linkerd-viz-ingress
-  namespace: linkerd
+  namespace: linkerd-viz
   labels:
     name: linkerd-viz-ingress
 spec:
