add upstream annotation for linkerd web

--- a/env/cluster-addons/linkerd/resources/linkerd-viz-ingress.yaml
+++ b/env/cluster-addons/linkerd/resources/linkerd-viz-ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: linkerd-viz
   labels:
     name: linkerd-viz-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
 spec:
   ingressClassName: nginx
   rules:
