add linkerd cni

--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -13,6 +13,13 @@ helmCharts:
     valuesFile: linkerd-values.yaml
 
   - repo: https://helm.linkerd.io/stable
+    name: linkerd2-cni
+    version: 2.11.1
+    releaseName: linkerd-cni
+    namespace: linkerd
+    valuesFile: linkerd-cni-values.yaml
+
+  - repo: https://helm.linkerd.io/stable
     name: linkerd-viz
     version: 2.11.1
     releaseName: linkerd-viz
