--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -16,7 +16,7 @@ helmCharts:
     name: linkerd2-cni
     version: 2.11.1
     releaseName: linkerd-cni
-    namespace: linkerd
+    namespace: linkerd-cni
     valuesFile: linkerd-cni-values.yaml
 
   - repo: https://helm.linkerd.io/stable
