--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -25,3 +25,10 @@ helmCharts:
     releaseName: linkerd-viz
     namespace: linkerd-viz
     valuesFile: linkerd-viz-values.yaml
+
+  - repo: https://flagger.app
+    name: flagger
+    version: 1.19.0
+    releaseName: flagger
+    namespace: linkerd
+    valuesFile: flagger-values.yaml
