enable install crds for flagger

--- a/env/devops/shared/keycloak/deployment.yaml
+++ b/env/devops/shared/keycloak/deployment.yaml
@@ -31,7 +31,7 @@ spec:
               value: info
             - name: KC_PROXY
               value: edge
-            - name: KC_DB
+            # - name: KC_DB
             #   value: postgres
             # - name: KC_DB_URL_HOST
             #   value: <DB_SERVER_HOST>
