--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -31,4 +31,5 @@ helmCharts:
     version: 1.19.0
     releaseName: flagger
     namespace: linkerd
+    includeCRDs: true
     valuesFile: flagger-values.yaml
