--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -26,10 +26,10 @@ helmCharts:
     namespace: linkerd-viz
     valuesFile: linkerd-viz-values.yaml
 
-  - repo: https://flagger.app
-    name: flagger
-    version: 1.19.0
-    releaseName: flagger
-    namespace: linkerd
-    includeCRDs: true
-    valuesFile: flagger-values.yaml
+  # - repo: https://flagger.app
+  #   name: flagger
+  #   version: 1.19.0
+  #   releaseName: flagger
+  #   namespace: linkerd
+  #   includeCRDs: true
+  #   valuesFile: flagger-values.yaml
