add jaeger receiver to otel coll

--- a/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -20,6 +20,12 @@ spec:
         protocols:
           grpc:
           http:
+      jaeger:
+        protocols:
+          grpc:
+          thrift_binary:
+          thrift_compact:
+          thrift_http:
 
       filelog:
         start_at: beginning
