--- a/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -96,7 +96,7 @@ spec:
 
     exporters:
       logging:
-        logLevel: debug
+        # logLevel: debug
 
       jaeger:
         endpoint: jaeger-operator-jaeger-collector.monitoring:14250
