--- a/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -130,11 +130,14 @@ spec:
           # record:
           #   # Adds 'traceID' as a log label, seen as 'traceid' in Loki.
           #   traceID: "traceid"
+    extensions:
+      healthcheck
 
     service:
+      extensions: [healthcheck]
       pipelines:
         traces:
-          receivers: [otlp]
+          receivers: [otlp, jaeger]
           processors: [batch]
           exporters: [logging, otlphttp/tempo, jaeger]
         metrics:
