--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -26,6 +26,14 @@ helmCharts:
     namespace: linkerd-viz
     valuesFile: linkerd-viz-values.yaml
 
+  - repo: https://linkerd.github.io/linkerd-smi
+    name: linkerd-smi
+    version: 0.2.0
+    releaseName: linkerd-smi
+    namespace: linkerd
+    includeCRDs: true
+    valuesFile: linkerd-smi-values.yaml
+
   - repo: https://flagger.app
     name: flagger
     version: 1.19.0
