fix secret path in externa-secret-operator clusterstore

--- a/env/cluster-addons/tools/external-secrets-operator/resources/cluster-secret-store.yaml
+++ b/env/cluster-addons/tools/external-secrets-operator/resources/cluster-secret-store.yaml
@@ -14,8 +14,8 @@ spec:
           accessKeyIDSecretRef:
             name: awssm-secret
             key: AWS_ACCESS_KEY_ID
-            namespace: external-secrets-operator
+            namespace: tools
           secretAccessKeySecretRef:
             name: awssm-secret
             key: AWS_SECRET_ACCESS_KEY
-            namespace: external-secrets-operator
+            namespace: tools
