--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -26,12 +26,12 @@ helmCharts:
     namespace: linkerd-viz
     valuesFile: linkerd-viz-values.yaml
 
-  # - repo: https://linkerd.github.io/linkerd-smi
-  #   name: linkerd-smi
-  #   version: 0.2.0
-  #   releaseName: linkerd-smi
-  #   namespace: linkerd
-  #   valuesFile: linkerd-smi-values.yaml
+  - repo: https://linkerd.github.io/linkerd-smi
+    name: linkerd-smi
+    version: 0.2.0
+    releaseName: linkerd-smi
+    namespace: linkerd
+    valuesFile: linkerd-smi-values.yaml
 
   - repo: https://flagger.app
     name: flagger
