fix for kynervo policy out of sync issue

--- a/env/devops/argocd/values.yaml
+++ b/env/devops/argocd/values.yaml
@@ -1,7 +1,14 @@
 server:
   config:
     url: mk.argocd.local
+
+    # To enable helm install through kustomize in argocd
     kustomize.buildOptions: --enable-helm
+
+    #fixes out of sync issue for kynervo and handles the autogen rule exclusion without ignoring the base rule definitions
+    resource.customizations.ignoreDifferences.kyverno.io.ClusterPolicy: |
+      jqPathExpressions:
+        - .spec.rules[] | select(.name|test("autogen-.")) #
 
   ingress:
     enabled: true
@@ -14,4 +21,4 @@ server:
       - mk.argocd.local
     tls:
       - hosts:
-        - mk.argocd.local
+          - mk.argocd.local
