--- a/argocd/apps/cluster-addons/cluster-addons-tools-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-tools-appset.yaml
@@ -36,8 +36,8 @@ spec:
         server: '{{server}}'
         namespace: tools
       syncPolicy:
-        # automated:
-        #   prune: true
-        #   selfHeal: true
+        automated:
+          prune: true
+          selfHeal: true
         syncOptions:
           - CreateNamespace=true
