--- a/env/devops/argocd/values.yaml
+++ b/env/devops/argocd/values.yaml
@@ -10,12 +10,16 @@ server:
       - group: kyverno.io
         kind: ClusterPolicy
         jqPathExpressions:
-          - .spec.rules[] # | select(.name|test("autogen-.")) # commented out the second part to ignore only autogen rule as the base rule (as in Git/helm chart) is also having empty maps as default for missing properties
+          # commented out the second part to ignore only autogen rule as the base rule (as in Git/helm chart) is also having empty maps as default for missing properties
+          # - .spec.rules[] | select(.name|test("autogen-.")) 
+          - .spec.rules[]
       - group: kyverno.io
         kind: Policy
         jqPathExpressions:
-          - .spec.rules[] # | select(.name|test("autogen-.")) # commented out the second part to ignore only autogen rule as the base rule (as in Git/helm chart) is also having empty maps as default for missing properties
-
+          # commented out the second part to ignore only autogen rule as the base rule (as in Git/helm chart) is also having empty maps as default for missing properties
+          # - .spec.rules[] | select(.name|test("autogen-.")) 
+          - .spec.rules[]
+          
   ingress:
     enabled: true
     annotations:
