--- a/env/devops/argocd/values.yaml
+++ b/env/devops/argocd/values.yaml
@@ -5,20 +5,25 @@ server:
     # To enable helm install through kustomize in argocd
     kustomize.buildOptions: --enable-helm
 
-    resource.customizations.ignoreDifferences: |
-      #fixes out of sync issue for kynervo and handles the autogen rule exclusion without ignoring the base rule definitions
-      - group: kyverno.io
-        kind: ClusterPolicy
-        jqPathExpressions:
-          # commented out the second part to ignore only autogen rule as the base rule (as in Git/helm chart) is also having empty maps as default for missing properties
-          - .spec.rules[] | select(.name|test("autogen-.")) 
-          # - .spec.rules[]
-      - group: kyverno.io
-        kind: Policy
-        jqPathExpressions:
-          # commented out the second part to ignore only autogen rule as the base rule (as in Git/helm chart) is also having empty maps as default for missing properties
-          - .spec.rules[] | select(.name|test("autogen-.")) 
-          # - .spec.rules[]
+    resource.customizations.ignoreDifferences.kyverno.io.ClusterPolicy: |
+      jqPathExpressions:
+        - .spec.rules[] | select(.name|test("autogen-.")) 
+    # resource.customizations.ignoreDifferences.kyverno.io.Policy: |
+    #   jqPathExpressions:
+    #     - .spec.rules[] | select(.name|test("autogen-.")) 
+    #   #fixes out of sync issue for kynervo and handles the autogen rule exclusion without ignoring the base rule definitions
+    #   - group: kyverno.io
+    #     kind: ClusterPolicy
+    #     jqPathExpressions:
+    #       # commented out the second part to ignore only autogen rule as the base rule (as in Git/helm chart) is also having empty maps as default for missing properties
+    #       - .spec.rules[] | select(.name|test("autogen-.")) 
+    #       # - .spec.rules[]
+    #   - group: kyverno.io
+    #     kind: Policy
+    #     jqPathExpressions:
+    #       # commented out the second part to ignore only autogen rule as the base rule (as in Git/helm chart) is also having empty maps as default for missing properties
+    #       - .spec.rules[] | select(.name|test("autogen-.")) 
+    #       # - .spec.rules[]
           
   ingress:
     enabled: true
