fix kynervo appset

--- a/argocd/apps/cluster-addons/cluster-addons-kynervo-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-kynervo-appset.yaml
@@ -13,7 +13,7 @@ spec:
 
   template:
     metadata:
-      name: "flagger-{{name}}"
+      name: "kynervo-{{name}}"
       namespace: argocd
     spec:
       project: cluster-addons
