--- a/env/cluster-addons/others/flagger/kustomization.yaml
+++ b/env/cluster-addons/others/flagger/kustomization.yaml
@@ -7,4 +7,4 @@ helmCharts:
     releaseName: flagger
     namespace: linkerd
     includeCRDs: true
-    valuesFile: flagger-values.yaml
+    valuesFile: values.yaml
