add prom and loki to otel coll pipeline

--- a/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -143,8 +143,8 @@ spec:
         metrics:
           receivers: [prometheus]
           processors: [batch]
-          exporters: [logging]
+          exporters: [logging, prometheus]
         logs:
           receivers: [filelog]
           processors: [batch]
-          exporters: [logging]
+          exporters: [logging, loki]
