--- a/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -99,7 +99,7 @@ spec:
         logLevel: debug
 
       prometheus:
-        endpoint: http://prometheus-operator-kube-p-prometheus.monitoring:9090
+        endpoint: prometheus-operator-kube-p-prometheus.monitoring:9090
 
       jaeger:
         endpoint: jaeger-operator-jaeger-collector.monitoring:14250
