update grafana ds

--- a/env/cluster-addons/monitoring/prometheus/values.yaml
+++ b/env/cluster-addons/monitoring/prometheus/values.yaml
@@ -9,7 +9,7 @@ grafana:
 
   ## ForceDeployDatasources Create datasource configmap even if grafana deployment has been disabled
   ##
-  forceDeployDatasources: true
+  forceDeployDatasources: false
 
 nodeExporter:
   enabled: false
