--- a/env/devops/monitoring/grafana/resources/ds-tempo-cm.yaml
+++ b/env/devops/monitoring/grafana/resources/ds-tempo-cm.yaml
@@ -6,11 +6,11 @@ metadata:
     grafana_datasource: "1"
     namespace: monitoring
 data:
-  tempo-ds.yaml: |-
+  ds-tempo.yaml: |-
     apiVersion: 1
     datasources:
-      - name: Tempo
-        uid: tempo
+      - name: DevOps-Tempo
+        uid: devops-tempo
         type: tempo
         url: http://tempo-tempo-distributed-query-frontend.monitoring:3100
         access: proxy
@@ -25,7 +25,7 @@ data:
           serviceMap:
             datasourceUid: prometheus
           tracesToLogs:
-            datasourceUid: loki
+            datasourceUid: devops-loki
             tags: ['job', 'instance', 'pod', 'namespace']
             mappedTags: [{ key: 'service.name', value: 'service' }]
             mapTagNamesEnabled: false
