refactor grafana ds cm names

--- a/env/devops/monitoring/grafana/resources/ds-jaeger-cm.yaml
+++ b/env/devops/monitoring/grafana/resources/ds-jaeger-cm.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: jaeger-ds-grafana
+  name: ds-jaeger
   labels:
     grafana_datasource: "1"
     namespace: monitoring
