--- a/env/devops/monitoring/grafana/resources/ds-loki-cm.yaml
+++ b/env/devops/monitoring/grafana/resources/ds-loki-cm.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: loki-ds-grafana
+  name: ds-loki
   labels:
     grafana_datasource: "1"
     namespace: monitoring
