--- a/env/devops/monitoring/grafana/values.yaml
+++ b/env/devops/monitoring/grafana/values.yaml
@@ -75,7 +75,7 @@ grafana:
         allowUiUpdates: true
     datasources:
       enabled: true
-      defaultDatasourceEnabled: true
+      defaultDatasourceEnabled: false
 
       ## URL of prometheus datasource
       ##
