--- a/env/devops/monitoring/grafana/resources/ds-tempo-cm.yaml
+++ b/env/devops/monitoring/grafana/resources/ds-tempo-cm.yaml
@@ -23,7 +23,7 @@ data:
           search:
             hide: false
           serviceMap:
-            datasourceUid: prometheus
+            datasourceUid: devops-prometheus
           tracesToLogs:
             datasourceUid: devops-loki
             tags: ['job', 'instance', 'pod', 'namespace']
