--- a/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -98,8 +98,8 @@ spec:
       logging:
         logLevel: debug
 
-      prometheus:
-        endpoint: prometheus-operator-kube-p-prometheus.monitoring:9090
+      # prometheus:
+      #   endpoint: prometheus-operator-kube-p-prometheus.monitoring:9090
 
       jaeger:
         endpoint: jaeger-operator-jaeger-collector.monitoring:14250
@@ -143,7 +143,7 @@ spec:
         metrics:
           receivers: [prometheus]
           processors: [batch]
-          exporters: [logging, prometheus]
+          exporters: [logging]
         logs:
           receivers: [filelog]
           processors: [batch]
