remove debug log level from otel coll

--- a/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -96,7 +96,7 @@ spec:
 
     exporters:
       logging:
-        logLevel: debug
+        # logLevel: debug
 
       # prometheus:
       #   endpoint: prometheus-operator-kube-p-prometheus.monitoring:9090
