--- a/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -147,4 +147,4 @@ spec:
         logs:
           receivers: [filelog]
           processors: [batch]
-          exporters: [logging, loki]
+          exporters: [logging]
