--- a/env/devops/monitoring/grafana/overlays/grafana-cm.yaml
+++ b/env/devops/monitoring/grafana/overlays/grafana-cm.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 data:
   grafana.ini: |
     [analytics]
-    check_for_updates = true
+    check_for_updates = false
+    reporting_enabled = false
     [grafana_net]
     url = https://grafana.net
     [log]
@@ -14,6 +15,15 @@ data:
     provisioning = /etc/grafana/provisioning
     [feature_toggles]
     enable = tempoSearch tempoBackendSearch tempoServiceGraph
+    [security]
+    cookie_secure = true
+    cookie_samesite = strict
+    strict_transport_security = true
+    strict_transport_security_subdomains = true
+    [auth]
+    disable_login_form = true
+    [server]
+    root_url = mk.grafana.local
 kind: ConfigMap
 metadata:
   name: grafana
