--- a/env/devops/monitoring/grafana/kustomization.yaml
+++ b/env/devops/monitoring/grafana/kustomization.yaml
@@ -19,4 +19,4 @@ patchesStrategicMerge:
   # to force argocd to replace(create/recreate) instead appling this crd as a workaround for it's name too long issue
   - "./overlays/crd-prometheuses.monitoring.coreos.com.yaml"
 
-  - "./overlays/grafana-cm.yaml"
+  # - "./overlays/grafana-cm.yaml"
