--- a/argocd/apps/test/osm-demo-services.yaml
+++ b/argocd/apps/test/osm-demo-services.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: linkerd-demo-app
+  name: osm-demo-app
   namespace: argocd
 spec:
   destination:
