--- a/env/test/linkerd-demo-app/app.yaml
+++ b/env/test/linkerd-demo-app/app.yaml
@@ -62,6 +62,26 @@ spec:
     app: web-svc
   type: ClusterIP
 ---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: linkerd-emojivoto-ingress
+  labels:
+    name: linkerd-emojivoto-ingress
+spec:
+  rules:
+  - host: mk.linkerd-emojivoto-web.local
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: web-svc
+            port: 
+              name: http
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
