add opencensus to otel coll

--- a/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -20,6 +20,7 @@ spec:
         protocols:
           grpc:
           http:
+      opencensus:
       jaeger:
         protocols:
           grpc:
@@ -137,7 +138,7 @@ spec:
     service:
       pipelines:
         traces:
-          receivers: [otlp, jaeger]
+          receivers: [otlp, opencensus, jaeger]
           processors: [batch]
           exporters: [logging, otlphttp/tempo, jaeger]
         metrics:
