--- a/env/cluster-addons/tools-dedicated-ns/linkerd/kustomization.yaml
+++ b/env/cluster-addons/tools-dedicated-ns/linkerd/kustomization.yaml
@@ -26,6 +26,13 @@ helmCharts:
     namespace: linkerd-viz
     valuesFile: linkerd-viz-values.yaml
 
+  - repo: https://helm.linkerd.io/stable
+    name: linkerd-jaeger
+    version: 2.11.1
+    releaseName: linkerd-jaeger
+    namespace: linkerd-jaeger
+    valuesFile: linkerd-jaeger-values.yaml
+
   - repo: https://flagger.app
     name: flagger
     version: 1.19.0
