--- a/env/test/jaeger-create-span-app/deployment.yaml
+++ b/env/test/jaeger-create-span-app/deployment.yaml
@@ -21,7 +21,7 @@ spec:
           image: jaegertracing/vertx-create-span:operator-e2e-tests
           env:
             - name: JAEGER_AGENT_HOST
-              value: otel-collector-daemonset-collector.monitoring
+              value: otel-collector-daemonset-collector.monitoring.svc.cluster.local
           ports:
             - containerPort: 8080
               protocol: TCP
