inject linkerd proxy to otel coll

--- a/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:
   mode: daemonset
   image: otel/opentelemetry-collector-contrib:latest
+  podAnnotations:
+    linkerd.io/inject: enabled
 
   volumes:
     - name: varlog
